# easyRNG

./: .gitignore  .lgtm.yml  .travis.yml  LICENSE  Makefile.am  README.md  appveyor-before-build.sh  appveyor-build.sh  appveyor.yml  azure-pipelines.yml  configure.ac  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  easyRNG.pc.in  easyRNG.spec.in  easyRNGf03.pc.in  easy__randist_8h.html  easy__rng_8h.html  examples.html  files.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  index.html  install_fortran_mod.py  installation_instructions.html  menudata.js  meson.build  meson_options.txt  pages.html  usage.html
.github/workflows/: ci.yml
docs/: Doxyfile.in  Makefile.am  extra_pages.dox  meson.build
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  files_0.js  functions_0.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js
src/: Makefile.am  easy_randist.cpp  easy_randist.h  easy_rng.cpp  easy_rng.h  easy_rng_f.F90  easy_rng_private.h  meson.build
tests/: Makefile.am  meson.build  test1.c  test2.c  test3.c  test4.F90  test5.F90  test6.F90
